--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {},
   "scripts": {
