--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines": {
+    "node": "14.4.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
