--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.3.1",
+    "serve": "^11.3.2",
     "uuid": "^3.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
+    "startT": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
