--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,8 @@
     "uuid": "^3.4.0"
   },
   "scripts": {
+    "client": "react-scripts start",
     "start": "serve -s build",
-    "startT": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
