--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "client": "npm start --prefix client",
-    "start": "concurrently \"npm start\" \"npm run client\"",
-    "server": "nodemon index --prefix server",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "node server.js --prefix server",
     "build": "react-scripts build",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client"
