--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,12 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.3.1",
+    "react-scripts": "3.4.3",
     "serve": "^11.3.2",
     "uuid": "^3.4.0"
   },
   "scripts": {
-    "client": "react-scripts start",
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
