--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "server.js",
   "scripts": {
     "client": "npm start --prefix client",
-    "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "node server.js --prefix server",
+    "start": "concurrently \"npm run server --prefix server\" \"npm run client\"",
     "build": "react-scripts build",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run server --prefix server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client"
   },
   "repository": {
