--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "client": "npm run client --prefix ../client",
     "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "server": "node server.js",
+    "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client"
