--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "client": "npm start --prefix client",
+    "client": "npm run client --prefix client",
     "start": "concurrently \"npm run server --prefix server\" \"npm run client\"",
     "server": "nodemon index --prefix server",
     "build": "react-scripts build",
