--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "client": "npm run client --prefix ../client",
     "client-install": "npm install --prefix client",
-    "start": "node server.js",
+    "start": "concurrently \"node server.js\" \"npm run client --prefix ../client\"",
     "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
